Google site audit optimization

--- a/projects/TicTacToe/index.html
+++ b/projects/TicTacToe/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <script src="script.js"></script>
+  <script defer src="script.js"></script>
   <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body style="background: #fbf7f5">
