--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <title>Mohamed Halat</title>
     <!-- All of this is incomplete -->
@@ -13,13 +13,10 @@
     <!-- Style Sheets -->
     <link rel="icon" type="image/svg" href="images/icon.svg">
     <link rel="stylesheet" href="style/index.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css?family=Work+Sans%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CNunito%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&ver=5.4.1"
-        rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <!-- <link href="https://fonts.googleapis.com/css?family=Work+Sans%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CNunito%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&ver=5.4.1" rel="stylesheet"> -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <!-- Google Charts API -->
     <script type="text/javascript" src="scripts/nav.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
@@ -88,11 +85,10 @@
                     <div style="padding:4%; text-align: center; margin: 0 auto; ">
                         <span style="line-height: 60px;">You can find me on</span>
                         <div style="margin-top:2%;width: auto; margin:0 auto; flex-grow: 5;">
-                            <a style="text-decoration: none;" href="https://www.linkedin.com/in/mohamed-halat/"
-                                target="_blank">
+                            <a style="text-decoration: none;" href="https://www.linkedin.com/in/mohamed-halat/" target="_blank" rel="noreferrer">
                                 <img src="images/LinkedIn.svg" alt="Linked In" style="width: 40%; cursor: pointer;">
                             </a>
-                            <a style="text-decoration: none;" href="https://github.com/MohamedHalat" target="_blank">
+                            <a style="text-decoration: none;" href="https://github.com/MohamedHalat" target="_blank" rel="noreferrer">
                                 <img src="images/Git.svg" alt="GitHub" style="width: 40%; cursor: pointer;">
                             </a>
                         </div>
@@ -194,9 +190,9 @@
                                         <div class="card-footer-content"
                                             style="display: flex; justify-content: space-around;">
                                             <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="/projects/TicTacToe/" target="_blank" title="mohamedhalat">Live</a></p>
+                                                    href="/projects/TicTacToe/" target="_blank" rel="noreferrer" title="mohamedhalat">Live</a></p>
                                             <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="https://github.com/AhmedHalat/3DTicTacToe" target="_blank" title="github">Code</a></p>
+                                                    href="https://github.com/AhmedHalat/3DTicTacToe" target="_blank" rel="noreferrer" title="github">Code</a></p>
                                         </div>
                                     </footer>
                                 </section>
@@ -217,10 +213,10 @@
                                             style="display: flex; justify-content: space-around;">
                                             <!-- <p ><a style="color: #0000b5; text-decoration: none;" href="/projects/TicTacToe/">Live</a></p> -->
                                             <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="https://github.com/AhmedHalat/FinalGame" target="_blank" title="github">Code</a>
+                                                    href="https://github.com/AhmedHalat/FinalGame" target="_blank" rel="noreferrer" title="github">Code</a>
                                             </p>
                                             <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="https://whimsical.com/XRnDKKfsQ9CrTStVnGK3qq" target="_blank" title="Whimsical">Design</a>
+                                                    href="https://whimsical.com/XRnDKKfsQ9CrTStVnGK3qq" target="_blank" rel="noreferrer" title="Whimsical">Design</a>
                                             </p>
                                         </div>
                                     </footer>
@@ -242,7 +238,7 @@
                                             style="display: flex; justify-content: space-around;">
                                             <!-- <p ><a style="color: #0000b5; text-decoration: none;" href="/projects/TicTacToe/">Live</a></p> -->
                                             <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="https://github.com/MohamedHalat/Mario" target="_blank" title="github">Code</a></p>
+                                                    href="https://github.com/MohamedHalat/Mario" target="_blank" rel="noreferrer" title="github">Code</a></p>
                                         </div>
                                     </footer>
                                 </section>
@@ -263,7 +259,7 @@
                                             style="display: flex; justify-content: space-around;">
                                             <!-- <p ><a style="color: #0000b5; text-decoration: none;" href="/projects/TicTacToe/">Live</a></p> -->
                                             <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="https://www.rodentid.com/?earmark=343"target="_blank"  title="rodentid.com">Live</a></p>
+                                                    href="https://www.rodentid.com/?earmark=343"target="_blank" rel="noreferrer"  title="rodentid.com">Live</a></p>
                                         </div>
                                     </footer>
                                 </section>
@@ -284,7 +280,7 @@
                                             style="display: flex; justify-content: space-around;">
                                             <!-- <p ><a style="color: #0000b5; text-decoration: none;" href="/projects/TicTacToe/">Live</a></p> -->
                                             <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="https://www.rodentid.com/?earmark=343" target="_blank" title="">Live</a></p>
+                                                    href="https://www.rodentid.com/?earmark=343" target="_blank" rel="noreferrer" title="">Live</a></p>
                                         </div>
                                     </footer>
                                 </section>
