added tags in skills and code

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         </div>
                     </div>
                 </div>
-                <h3 style="color:#fcb934;">Just a Student who Codes</h3>
+                <h3 style="color:#fcb934;">Currently under construction!</h3>
             </div>
         </section>
 
@@ -150,6 +150,77 @@
                                 nostrud exercitation.
                             </span>
                         </div>
+                        <section>
+                            <div class="card-body">
+                                <h3>Front End</h3>
+                                <div>
+                                    <ul class="tags">
+                                        <li><span>HTML</span></li>
+                                        <li><span>CSS</span></li>
+                                        <li><span>JS</span></li>
+                                      </ul>
+                                </div>
+                            </div>
+                        </section>
+                        <section>
+                            <div class="card-body">
+                                <h3>Back End</h3>
+                                <div>
+                                    <ul class="tags">
+                                        <li><span>node.js</span></li>
+                                        <li><span>php</span></li>
+                                        <li><span>MySQL</span></li>
+                                      </ul>
+                                </div>
+                            </div>
+                        </section>
+                        <section>
+                            <div class="card-body">
+                                <h3>Cloud/Tools</h3>
+                                <div>
+                                    <ul class="tags">
+                                        <li><span>GCP</span></li>
+                                        <li><span>Firebase</span></li>
+                                        <li><span>GitHub</span></li>
+                                        <li><span>DialogFlow</span></li>
+                                        <li><span>Actions-on-Google</span></li>
+                                      </ul>
+                                </div>
+                            </div>
+                        </section>
+                        <section>
+                            <div class="card-body">
+                                <h3>Management/Design</h3>
+                                <div>
+                                    <ul class="tags">
+                                        <li><span>Trello</span></li>
+                                        <li><span>Whimsical</span></li>
+                                        <li><span>Figma</span></li>
+                                        <li><span>Sketch</span></li>
+                                        <li><span>Zepplin</span></li>
+                                      </ul>
+                                </div>
+                            </div>
+                        </section>
+                        <section>
+                            <div class="card-body">
+                                <h3>Languages</h3>
+                                <div>
+                                    <ul class="tags">
+                                        <li><span>Java</span></li>
+                                        <li><span>Python</span></li>
+                                        <li><span>C</span></li>
+                                        <li><span>HTML</span></li>
+                                        <li><span>CSS</span></li>
+                                        <li><span>JS</span></li>
+                                        <li><span>Node.JS</span></li>
+                                        <li><span>MySQL</span></li>
+                                        <li><span>php</span></li>
+                                        <li><span>Turing</span></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </section>
                     </div>
                 </div>
             </div>
@@ -184,6 +255,11 @@
                                                 elit, sed do eiusmod tempor incididunt ut labore et
                                                 dolore magna aliqua.
                                             </span>
+                                            <ul class="tags">
+                                                <li><span>HTML</span></li>
+                                                <li><span>CSS</span></li>
+                                                <li><span>JS</span></li>
+                                              </ul>
                                         </div>
                                     </div>
                                     <footer class="card-footer">
@@ -206,6 +282,11 @@
                                                 elit, sed do eiusmod tempor incididunt ut labore et
                                                 dolore magna aliqua.
                                             </span>
+                                            <ul class="tags">
+                                                <li><span>Java</span></li>
+                                                <li><span>OOP</span></li>
+                                                <li><span>GitHub</span></li>
+                                              </ul>
                                         </div>
                                     </div>
                                     <footer class="card-footer">
@@ -231,6 +312,9 @@
                                                 elit, sed do eiusmod tempor incididunt ut labore et
                                                 dolore magna aliqua.
                                             </span>
+                                            <ul class="tags">
+                                                <li><span>Java</span></li>
+                                              </ul>
                                         </div>
                                     </div>
                                     <footer class="card-footer">
@@ -252,6 +336,11 @@
                                                 elit, sed do eiusmod tempor incididunt ut labore et
                                                 dolore magna aliqua.
                                             </span>
+                                            <ul class="tags">
+                                                <li><span>HTML</span></li>
+                                                <li><span>CSS</span></li>
+                                                <li><span>JS</span></li>
+                                            </ul>
                                         </div>
                                     </div>
                                     <footer class="card-footer">
@@ -273,6 +362,11 @@
                                                 elit, sed do eiusmod tempor incididunt ut labore et
                                                 dolore magna aliqua.
                                             </span>
+                                            <ul class="tags">
+                                                <li><span>HTML</span></li>
+                                                <li><span>CSS</span></li>
+                                                <li><span>JS</span></li>
+                                              </ul>
                                         </div>
                                     </div>
                                     <footer class="card-footer">
@@ -294,6 +388,65 @@
                                                 elit, sed do eiusmod tempor incididunt ut labore et
                                                 dolore magna aliqua.
                                             </span>
+                                            <ul class="tags">
+                                                <li><span>node.js</span></li>
+                                                <li><span>MySQL</span></li>
+                                                <li><span>JS</span></li>
+                                              </ul>
+                                        </div>
+                                    </div>
+                                    <footer class="card-footer">
+                                        <div class="card-footer-content"
+                                            style="display: flex; justify-content: space-around;">
+                                            <!-- <p ><a style="color: #0000b5; text-decoration: none;" href="/projects/TicTacToe/">Live</a></p> -->
+                                            <p><a style="color: #0000b5; text-decoration: none;"
+                                                    href="https://github.com/MohamedHalat/ElkStack-Finance" title="github">Code</a></p>
+                                        </div>
+                                    </footer>
+                                </section>
+                                
+                                <section class="card">
+                                    <div class="card-body">
+                                        <h3>Bots</h3>
+                                        <div>
+                                            <span>
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing
+                                                elit, sed do eiusmod tempor incididunt ut labore et
+                                                dolore magna aliqua.
+                                            </span>
+                                            <ul class="tags">
+                                                <li><span>DialogFlow</span></li>
+                                                <li><span>GCP</span></li>
+                                                <li><span>Node.JS</span></li>
+                                                <li><span>MySQL</span></li>
+                                              </ul>
+                                        </div>
+                                    </div>
+                                    <footer class="card-footer">
+                                        <div class="card-footer-content"
+                                            style="display: flex; justify-content: space-around;">
+                                            <!-- <p ><a style="color: #0000b5; text-decoration: none;" href="/projects/TicTacToe/">Live</a></p> -->
+                                            <p><a style="color: #0000b5; text-decoration: none;"
+                                                    href="https://github.com/MohamedHalat/ElkStack-Finance" title="github">Code</a></p>
+                                        </div>
+                                    </footer>
+                                </section>
+
+                                <section class="card">
+                                    <div class="card-body">
+                                        <h3>Kibana</h3>
+                                        <div>
+                                            <span>
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing
+                                                elit, sed do eiusmod tempor incididunt ut labore et
+                                                dolore magna aliqua.
+                                            </span>
+                                            <ul class="tags">
+                                                <li><span>Logstash</span></li>
+                                                <li><span>elasticsearch</span></li>
+                                                <li><span>MySQL</span></li>
+                                                <li><span>Kibana</span></li>
+                                              </ul>
                                         </div>
                                     </div>
                                     <footer class="card-footer">
