removed projects to github

--- a/index.html
+++ b/index.html
@@ -204,18 +204,12 @@
                         </section>
                         <section>
                             <div class="card-body">
-                                <h3>Languages</h3>
+                                <h3>Other</h3>
                                 <div>
                                     <ul class="tags">
                                         <li><span>Java</span></li>
                                         <li><span>Python</span></li>
                                         <li><span>C</span></li>
-                                        <li><span>HTML</span></li>
-                                        <li><span>CSS</span></li>
-                                        <li><span>JS</span></li>
-                                        <li><span>Node.JS</span></li>
-                                        <li><span>MySQL</span></li>
-                                        <li><span>php</span></li>
                                         <li><span>Turing</span></li>
                                     </ul>
                                 </div>
