Tag names change

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                         <li><span>Firebase</span></li>
                                         <li><span>GitHub</span></li>
                                         <li><span>DialogFlow</span></li>
-                                        <li><span>Actions-on-Google</span></li>
+                                        <li><span>Actions</span></li>
                                       </ul>
                                 </div>
                             </div>
@@ -308,6 +308,7 @@
                                             </span>
                                             <ul class="tags">
                                                 <li><span>Java</span></li>
+                                                <li><span>OOP</span></li>
                                               </ul>
                                         </div>
                                     </div>
@@ -405,12 +406,12 @@
                                         <div>
                                             <span>
                                                 Lorem ipsum dolor sit amet, consectetur adipiscing
-                                                elit, sed do eiusmod tempor incididunt ut labore et
-                                                dolore magna aliqua.
+                                                elit, sed do eiusmod tempor incididunt.
                                             </span>
                                             <ul class="tags">
                                                 <li><span>DialogFlow</span></li>
                                                 <li><span>GCP</span></li>
+                                                <li><span>Actions</span></li>
                                                 <li><span>Node.JS</span></li>
                                                 <li><span>MySQL</span></li>
                                               </ul>
@@ -432,14 +433,14 @@
                                         <div>
                                             <span>
                                                 Lorem ipsum dolor sit amet, consectetur adipiscing
-                                                elit, sed do eiusmod tempor incididunt ut labore et
-                                                dolore magna aliqua.
+                                                elit, sed do eiusmod tempor incididunt.
                                             </span>
                                             <ul class="tags">
                                                 <li><span>Logstash</span></li>
                                                 <li><span>elasticsearch</span></li>
                                                 <li><span>MySQL</span></li>
                                                 <li><span>Kibana</span></li>
+                                                <li><span>GCP</span></li>
                                               </ul>
                                         </div>
                                     </div>
