--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
                                         <div class="card-footer-content"
                                             style="display: flex; justify-content: space-around;">
                                             <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="/projects/TicTacToe/" target="_blank" rel="noreferrer" title="mohamedhalat">Live</a></p>
+                                                    href="https://ahmedhalat.github.io/2DTicTacToe/" target="_blank" rel="noreferrer" title="GitHub Pages">Live</a></p>
                                             <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="https://github.com/AhmedHalat/3DTicTacToe" target="_blank" rel="noreferrer" title="github">Code</a></p>
+                                                    href="https://github.com/AhmedHalat/3DTicTacToe" target="_blank" rel="noreferrer" title="GitHub">Code</a></p>
                                         </div>
                                     </footer>
                                 </section>
@@ -288,7 +288,7 @@
                                             style="display: flex; justify-content: space-around;">
                                             <!-- <p ><a style="color: #0000b5; text-decoration: none;" href="/projects/TicTacToe/">Live</a></p> -->
                                             <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="https://github.com/AhmedHalat/FinalGame" target="_blank" rel="noreferrer" title="github">Code</a>
+                                                    href="https://github.com/AhmedHalat/FinalGame" target="_blank" rel="noreferrer" title="GitHub">Code</a>
                                             </p>
                                             <p><a style="color: #0000b5; text-decoration: none;"
                                                     href="https://whimsical.com/XRnDKKfsQ9CrTStVnGK3qq" target="_blank" rel="noreferrer" title="Whimsical">Design</a>
@@ -317,7 +317,7 @@
                                             style="display: flex; justify-content: space-around;">
                                             <!-- <p ><a style="color: #0000b5; text-decoration: none;" href="/projects/TicTacToe/">Live</a></p> -->
                                             <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="https://github.com/MohamedHalat/Mario" target="_blank" rel="noreferrer" title="github">Code</a></p>
+                                                    href="https://github.com/MohamedHalat/Mario" target="_blank" rel="noreferrer" title="GitHub">Code</a></p>
                                         </div>
                                     </footer>
                                 </section>
@@ -395,7 +395,7 @@
                                             style="display: flex; justify-content: space-around;">
                                             <!-- <p ><a style="color: #0000b5; text-decoration: none;" href="/projects/TicTacToe/">Live</a></p> -->
                                             <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="https://github.com/MohamedHalat/ElkStack-Finance" title="github">Code</a></p>
+                                                    href="https://github.com/MohamedHalat/ElkStack-Finance" title="GitHub">Code</a></p>
                                         </div>
                                     </footer>
                                 </section>
@@ -422,7 +422,7 @@
                                             style="display: flex; justify-content: space-around;">
                                             <!-- <p ><a style="color: #0000b5; text-decoration: none;" href="/projects/TicTacToe/">Live</a></p> -->
                                             <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="https://github.com/MohamedHalat/ElkStack-Finance" title="github">Code</a></p>
+                                                    href="https://github.com/AhmedHalat/ServerManager" title="GitHub">Code</a></p>
                                         </div>
                                     </footer>
                                 </section>
@@ -449,7 +449,7 @@
                                             style="display: flex; justify-content: space-around;">
                                             <!-- <p ><a style="color: #0000b5; text-decoration: none;" href="/projects/TicTacToe/">Live</a></p> -->
                                             <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="https://github.com/MohamedHalat/ElkStack-Finance" title="github">Code</a></p>
+                                                    href="https://github.com/MohamedHalat/ElkStack-Finance" title="GitHub">Code</a></p>
                                         </div>
                                     </footer>
                                 </section>
