Added Link for this github project

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- This Site is incomplete -->
     <title>Mohamed Halat</title>
-    <!-- All of this is incomplete -->
     <!-- Meta -->
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -13,13 +13,11 @@
     <!-- Style Sheets -->
     <link rel="icon" type="image/svg" href="images/icon.svg">
     <link rel="stylesheet" href="style/index.css" />
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Work+Sans%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CNunito%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&ver=5.4.1" rel="stylesheet"> -->
+
+    <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <!-- Google Charts API -->
     <script type="text/javascript" src="scripts/nav.js"></script>
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 </head>
 
 <body>
@@ -51,7 +49,6 @@
         </ul>
     </nav>
     <footer style="height: 2px;width:100%; background-color: #fcb934; position: fixed;">
-
     </footer>
 
     <main>
@@ -65,7 +62,7 @@
                         </div>
                     </div>
                 </div>
-                <h3 style="color:#fcb934;">Currently under construction!</h3>
+                <h3 style="color:#fcb934;">Currently under construction! <a style="color:#fcb934;" href="https://github.com/MohamedHalat/Personal-Site/projects/1">View Project</a></h3>
             </div>
         </section>
 
@@ -493,13 +490,7 @@
 
             </div>
         </section>
-
     </main>
-    <script>
-        function toggle() {
-            console.log("TOGGLE");
-        }
-    </script>
 </body>
 
 </html>
