--- a/old.html
+++ b/old.html
@@ -12,9 +12,8 @@
 
     <!-- Style Sheets -->
     <link rel="icon" type="image/svg" href="images/icon.svg">
-    <link rel="stylesheet" href="style/style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/old.css" />
+
     <link href="https://fonts.googleapis.com/css?family=Work+Sans%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CNunito%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&ver=5.4.1" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
@@ -119,7 +118,7 @@
                         <h3>Projects</h3>
                         <div>
                             <p>Here are some links</p>
-                            <p><a href="/projects/TicTacToe/">3D TicTacToe</a></p>
+                            <p><a href="https://ahmedhalat.github.io/2DTicTacToe/">3D TicTacToe</a></p>
                             <p><a href="https://www.rodentid.com/?earmark=343">RodentId.com</a></p>
                             <p><a href="https://breedingcalculator.com">BreedingCalculator.com</a></p>
                             <p><a href="https://github.com/AhmedHalat/FinalGame">Dungeon Diver</a></p>
