--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
             </li>
         </ul>
     </nav>
-    <footer style="height: 2px;width:100%; background-color: #fcb934; position: fixed;">
+    <footer class="nav-footer" style="height: 2px;width:100%; background-color: #fcb934; position: fixed;">
     </footer>
-
     <main>
         <section id="home"
             style="background:linear-gradient(90deg, #4B6CB7 0%, #182848 100%);overflow-y: hidden; height: 40%;">
