Updated links to open in new tab

--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
                         </div>
                     </div>
                 </div>
-                <h3 class="text-emphasis">Currently under construction! <a class="text-emphasis"
-                        href="https://github.com/MohamedHalat/Personal-Site/projects/1">View Project</a></h3>
+                <h3 class="text-emphasis">Currently under construction! 
+                    <a class="text-emphasis" target="_blank" rel="noreferrer" href="https://github.com/MohamedHalat/Personal-Site/projects/1">View Project</a>
+                </h3>
             </div>
         </section>
 
@@ -84,12 +85,10 @@
                     <div style="text-align: center; margin: 0 auto; ">
                         <span style="line-height: 60px;">You can find me on</span>
                         <div style="margin-top:2%;width: auto; margin:0 auto; flex-grow: 5;">
-                            <a style="text-decoration: none;" href="https://www.linkedin.com/in/mohamed-halat/"
-                                target="_blank" rel="noreferrer">
+                            <a style="text-decoration: none;" href="https://www.linkedin.com/in/mohamed-halat/" target="_blank" rel="noreferrer">
                                 <img src="images/LinkedIn.svg" alt="Linked In" style="width: 40%; cursor: pointer;">
                             </a>
-                            <a style="text-decoration: none;" href="https://github.com/MohamedHalat" target="_blank"
-                                rel="noreferrer">
+                            <a style="text-decoration: none;" href="https://github.com/MohamedHalat" target="_blank" rel="noreferrer">
                                 <img src="images/Git.svg" alt="GitHub" style="width: 40%; cursor: pointer;">
                             </a>
                         </div>
@@ -103,7 +102,7 @@
                                 I am also currently a part time SDE intern at <span class="text-emphasis">Iseehear</span>.
                             </p>
                             <p>
-                                You can view my old site <a href="/old.html" class="text-emphasis">here</a>.
+                                You can view my old site <a href="/old.html" target="_blank" rel="noreferrer" class="text-emphasis">here</a>.
                             </p>
                         </span>
                     </div>
@@ -241,15 +240,14 @@
                                 Here are some of the projects I've been working on either for class, work or as personal projects.
                             </span>
 
-                            <div
-                                style="padding-top:60px; display: flex;flex-direction: row;flex-wrap: wrap; justify-content: space-evenly;align-content: space-around;align-items: flex-start;">
+                            <div style="padding-top:60px; display: flex;flex-direction: row;flex-wrap: wrap; justify-content: space-evenly;align-content: space-around;align-items: flex-start;">
                                 <section class="card">
                                     <div class="card-body">
                                         <h3 class="card-head">TicTacToe</h3>
                                         <div class="card-text">
                                             <span>
-                                                A 3D TicTacToe Game. Check out the instructions <a
-                                                    href="https://github.com/AhmedHalat/2DTicTacToe/blob/master/README.md">here</a>.
+                                                A 3D TicTacToe Game. Check out the instructions 
+                                                <a href="https://github.com/AhmedHalat/2DTicTacToe/blob/master/README.md" target="_blank" rel="noreferrer">here</a>.
                                                 This project is still incomplete
                                             </span>
                                         </div>
@@ -264,12 +262,16 @@
                                     <footer class="card-footer">
                                         <div class="card-footer-content"
                                             style="display: flex; justify-content: space-around;">
-                                            <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="https://ahmedhalat.github.io/2DTicTacToe/" target="_blank"
-                                                    rel="noreferrer" title="GitHub Pages">Live</a></p>
-                                            <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="https://github.com/AhmedHalat/3DTicTacToe" target="_blank"
-                                                    rel="noreferrer" title="GitHub">Code</a></p>
+                                            <p>
+                                                <a style="color: #0000b5; text-decoration: none;" href="https://ahmedhalat.github.io/2DTicTacToe/" target="_blank" rel="noreferrer" title="GitHub Pages">
+                                                    Live
+                                                </a>
+                                            </p>
+                                            <p>
+                                                <a style="color: #0000b5; text-decoration: none;" href="https://github.com/AhmedHalat/3DTicTacToe" target="_blank" rel="noreferrer" title="GitHub">
+                                                    Code
+                                                </a>
+                                            </p>
                                         </div>
                                     </footer>
                                 </section>
@@ -407,7 +409,7 @@
                                             style="display: flex; justify-content: space-around;">
                                             <!-- <p ><a style="color: #0000b5; text-decoration: none;" href="/projects/TicTacToe/">Live</a></p> -->
                                             <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="https://github.com/MohamedHalat/ElkStack-Finance"
+                                                    href="https://github.com/MohamedHalat/ElkStack-Finance" target="_blank" rel="noreferrer"
                                                     title="GitHub">Code</a></p>
                                         </div>
                                     </footer>
@@ -435,7 +437,7 @@
                                             style="display: flex; justify-content: space-around;">
                                             <!-- <p ><a style="color: #0000b5; text-decoration: none;" href="/projects/TicTacToe/">Live</a></p> -->
                                             <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="https://github.com/AhmedHalat/ServerManager"
+                                                    href="https://github.com/AhmedHalat/ServerManager" target="_blank" rel="noreferrer"
                                                     title="GitHub">Code</a></p>
                                         </div>
                                     </footer>
@@ -463,7 +465,7 @@
                                             style="display: flex; justify-content: space-around;">
                                             <!-- <p ><a style="color: #0000b5; text-decoration: none;" href="/projects/TicTacToe/">Live</a></p> -->
                                             <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="https://github.com/MohamedHalat/ElkStack-Finance"
+                                                    href="https://github.com/MohamedHalat/ElkStack-Finance" target="_blank" rel="noreferrer"
                                                     title="GitHub">Code</a></p>
                                         </div>
                                     </footer>
