class styles added

--- a/index.html
+++ b/index.html
@@ -235,12 +235,12 @@
                     </div>
 
                     <div style="display:flex; justify-content: space-evenly;">
-                        <div style="padding:4%; text-align: center; margin:0 auto; flex-shrink: 5;">
+                        <div style="padding:4%; text-align: center; margin:0 auto;">
                             <span>
                                 Here are some of the projects I've been working on either for class, work or as personal projects.
                             </span>
 
-                            <div style="padding-top:60px; display: flex;flex-direction: row;flex-wrap: wrap; justify-content: space-evenly;align-content: space-around;align-items: flex-start;">
+                            <div class="flex-container" style="padding-top:60px; ">
                                 <section class="card">
                                     <div class="card-body">
                                         <h3 class="card-head">TicTacToe</h3>
@@ -260,15 +260,14 @@
                                         </div>
                                     </div>
                                     <footer class="card-footer">
-                                        <div class="card-footer-content"
-                                            style="display: flex; justify-content: space-around;">
+                                        <div class="card-footer-content">
                                             <p>
-                                                <a style="color: #0000b5; text-decoration: none;" href="https://ahmedhalat.github.io/2DTicTacToe/" target="_blank" rel="noreferrer" title="GitHub Pages">
+                                                <a class="link-out" href="https://ahmedhalat.github.io/2DTicTacToe/" target="_blank" rel="noreferrer" title="GitHub Pages">
                                                     Live
                                                 </a>
                                             </p>
                                             <p>
-                                                <a style="color: #0000b5; text-decoration: none;" href="https://github.com/AhmedHalat/3DTicTacToe" target="_blank" rel="noreferrer" title="GitHub">
+                                                <a class="link-out" href="https://github.com/AhmedHalat/3DTicTacToe" target="_blank" rel="noreferrer" title="GitHub">
                                                     Code
                                                 </a>
                                             </p>
@@ -503,8 +502,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-
             </div>
         </section>
     </main>
